[유하람] 강의공고 업무 수정 (협회권한-> 교육원권한), 강의실 조회 구현

--- a/lms/src/main/resources/templates/association/classroom/addClassroom.html
+++ b/lms/src/main/resources/templates/association/classroom/addClassroom.html
@@ -60,7 +60,7 @@ $(document).ready(function(){
 		    <input type="text" class="form-control" placeholder="숫자만 입력가능합니다" id="classroomMaximumNo" name="classroomMaximumNo">
 		</div>
 		<span id="helper" style="color:red"></span><br>
-		<button id="insert" type="button">강의실 등록하기</button>
+		<button id="insert" type="button" class="btn btn-primary btn-rightLarge">강의실 등록하기</button>
 	</form>
 </div>
 </html>
