--- a/lms/src/main/resources/templates/association/classroom/searchInstitution.html
+++ b/lms/src/main/resources/templates/association/classroom/searchInstitution.html
@@ -55,7 +55,7 @@ $(document).ready(function(){
 	<br>
 	<h6> ex) 서울, 전주....</h6>
 	<input id="instName" name="instName" type="text">
-	<button id="search" type="button">search</button>	
+	<button id="search" type="button" class="btn btn-primary btn-rightLarge">search</button>	
 	
 	<!-- 교육원리스트 출력을 위한 table 태그 -->
 	<table id="institutionList" class="table table-striped">
