--- a/lms/src/main/resources/templates/association/institution/detailInstitution.html
+++ b/lms/src/main/resources/templates/association/institution/detailInstitution.html
@@ -46,7 +46,7 @@
 			</tr>
 		</table>
 	</form>
-	<button id="modify" type="submit">수정</button>
-	<button id="delete" type="submit">삭제</button>
+	<button id="modify" type="submit" class="btn btn-primary btn-rightLarge">수정</button>
+	<button id="delete" type="submit" class="btn btn-primary btn-rightLarge">삭제</button>
 </div>
 </html>
