--- a/lms/src/main/resources/templates/association/lecture/addInfoLecture.html
+++ b/lms/src/main/resources/templates/association/lecture/addInfoLecture.html
@@ -42,7 +42,7 @@ $(document).ready(function(){
 			<input type="text" class="form-control"  id="infoLectureName" name="infoLectureName">
 		</div>
 		<span id="helper" style="color:red"></span>
-		<button id="insert" type="button">등록하기</button>	
+		<button id="insert" type="button" class="btn btn-primary btn-rightLarge">등록하기</button>	
 	</form>
 </div>
 </html>
