--- a/lms/src/main/resources/templates/association/classroom/classroomList.html
+++ b/lms/src/main/resources/templates/association/classroom/classroomList.html
@@ -58,7 +58,7 @@ $(document).ready(function(){
 		<h6> ex) 서울, 전주....</h6>
 		
 		<input id="classroomLocation" name="classroomLocation" type="text">
-		<button id="search" type="button">search</button>
+		<button id="search" type="button" class="btn btn-primary btn-rightLarge">search</button>
 	</div>
 	
 	<div class="form-group">
