--- a/lms/src/main/resources/templates/association/classroom/detailClassroom.html
+++ b/lms/src/main/resources/templates/association/classroom/detailClassroom.html
@@ -36,8 +36,8 @@
 				<td th:text="${info.classroomMaximumNo}" th:value="${info.classroomMaximumNo}"></td>
 			</tr>
 		</table>
-		<button id="modify" type="submit">수정</button>
-		<button id="delete" type="submit">삭제</button>
+		<button id="modify" type="submit" class="btn btn-primary btn-rightLarge">수정</button>
+		<button id="delete" type="submit" class="btn btn-primary btn-rightLarge">삭제</button>
 	</form>
 	
 </div>
