--- a/lms/src/main/resources/templates/association/institution/addInstitution.html
+++ b/lms/src/main/resources/templates/association/institution/addInstitution.html
@@ -90,7 +90,7 @@ $(document).ready(function(){
 		</div>
 		
 		<span id="helper" style="color:red"></span><br>
-		<button id="insert" type="button">강의실 등록하기</button>	
+		<button id="insert" type="button" class="btn btn-primary btn-rightLarge">강의실 등록하기</button>	
 	</form>
 </div>
 </html>
