--- a/lms/src/main/resources/templates/association/institution/institutionList.html
+++ b/lms/src/main/resources/templates/association/institution/institutionList.html
@@ -9,10 +9,21 @@
 
 <!-- html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+<script>$(document).ready(function(){
+	// 교육원 등록하기 버튼 클릭시 이벤트 처리
+	$('#btnAdd').on('click',function(){
+		console.log('#btnAdd click test');
+		location.href='/association/institution/addInstitution'
+	});
+});
+</script>
 </th:block>
 
 <div layout:fragment="content">
 	<h1>교육원 목록</h1>
+	
+	<button type="button" id="btnAdd" class="btn btn-primary btn-rightLarge">교육원 등록하기</button><br><br>
+	
 	<table class="table table-striped">
 		<thead>
 			<tr>
