--- a/lms/src/main/resources/templates/association/lecture/addInfoSubject.html
+++ b/lms/src/main/resources/templates/association/lecture/addInfoSubject.html
@@ -80,7 +80,7 @@ $(document).ready(function(){
 		</div>
 		
 		<span id="helper" style="color:red"></span>
-		<button id="insert" type="button">등록하기</button>	
+		<button id="insert" type="button" class="btn btn-primary btn-rightLarge">등록하기</button>	
 	</form>
 </div>
 </html>
