--- a/lms/src/main/resources/templates/association/lecture/detailInfoLecture.html
+++ b/lms/src/main/resources/templates/association/lecture/detailInfoLecture.html
@@ -30,8 +30,8 @@
 				</tr>
 			</tbody>
 		</table>
-		<button id="modify" type="button">수정</button>
-		<button id="delete" type="button">삭제</button>
+		<button id="modify" type="button" class="btn btn-primary btn-rightLarge">수정</button>
+		<button id="delete" type="button" class="btn btn-primary btn-rightLarge">삭제</button>
 	</form>
 </div>
 </html>
