--- a/lms/src/main/resources/templates/association/lecture/detailSubject.html
+++ b/lms/src/main/resources/templates/association/lecture/detailSubject.html
@@ -27,7 +27,9 @@
 				<td>변경일자</td>
 				<td th:text="${info.infoSubjectModificationHistory}" th:value="${info.infoSubjectModificationHistory}"></td>	
 			</tr>
-		</table>
+		</table>		
+		<button id="modify" type="button" class="btn btn-primary btn-rightLarge">수정</button>
+		<button id="delete" type="button" class="btn btn-primary btn-rightLarge">삭제</button>
 	</form>
 </div>
 </html>
