--- a/lms/src/main/resources/templates/institution/classroom/detailClassroom.html
+++ b/lms/src/main/resources/templates/institution/classroom/detailClassroom.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="EUC-KR">
-<title>Insert title here</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org" 
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/institutionLayout">
+<meta charset="utf-8">
+<!-- html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
+</th:block>
 
-</body>
+<!-- html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+</th:block>
+
+<div layout:fragment="content">
+	<h2>강의실 상세조회</h2>
+	<form>
+		<table class="table table-striped" th:each="info:${classroom}">
+				<tr>
+					<td>강의실명</td>
+					<td th:text="${info.classroomName}" th:value="${info.classroomCode}"></td>	
+				</tr>
+				<tr>
+					<td>교육원명</td>
+					<td th:text="${info.institutionName}" th:value="${info.institutionName}"></td>					
+				</tr>
+				<tr>
+					<td>강의실위치</td>
+					<td th:text="${info.classroomLocation}" th:value="${info.classroomLocation}"></td>
+				</tr>
+				<tr>
+					<td>용도</td>
+					<td th:text="${info.classroomUse}" th:value="${info.classroomUse}"></td>
+				</tr>
+				<tr>
+					<td>최대수용인원</td>
+					<td th:text="${info.classroomMaximumNo}" th:value="${info.classroomMaximumNo}"></td>
+				</tr>
+				<tr>
+					<td>등록일자</td>
+					<td th:text="${info.classroomDate}" th:value="${info.classroomDate}"></td>
+				</tr>		
+		</table>
+		<button id="modify" type="submit" class="btn btn-primary btn-rightLarge">수정</button>
+		<button id="delete" type="submit" class="btn btn-primary btn-rightLarge">삭제</button>
+	</form>
+</div>
 </html>
