--- a/lms/src/main/resources/templates/institution/lecture/detailInfoSubject.html
+++ b/lms/src/main/resources/templates/institution/lecture/detailInfoSubject.html
@@ -28,6 +28,8 @@
 				<td th:text="${info.infoSubjectModificationHistory}" th:value="${info.infoSubjectModificationHistory}"></td>	
 			</tr>
 		</table>
+		<button id="modify" type="submit" class="btn btn-primary btn-rightLarge">수정</button>
+		<button id="delete" type="submit" class="btn btn-primary btn-rightLarge">삭제</button>
 	</form>
 </div>
 </html>
