--- a/lms/src/main/resources/templates/institution/lecture/detailLecture.html
+++ b/lms/src/main/resources/templates/institution/lecture/detailLecture.html
@@ -13,31 +13,35 @@
 
 <div layout:fragment="content">
 	<h2>강의목록 조회</h2>
-	<table class="table table-striped" th:each="lecture:${lecture}">
-		<tr>
-			<td>강의공고명</td>
-			<td th:text=${lecture.noticeLectureTitle} th:value="${lecture.lectureCode}"></td>
-		</tr>
-		<tr>
-			<td>교육원명</td>
-			<td th:text=${lecture.institutionName} th:value="${lecture.institutionCode}"></td>
-		</tr>
-		<tr>
-			<td>강사명</td>
-			<td th:text=${lecture.memberTeacherName} th:value="${lecture.memberTeacherCode}"></td>
-		</tr>
-		<tr>
-			<td>강의 시작일</td>
-			<td th:text=${lecture.lectureStartDate} th:value="${lecture.lectureStartDate}"></td>
-		</tr>
-		<tr>
-			<td>강의 종료일</td>
-			<td th:text=${lecture.lectureEndDate} th:value="${lecture.lectureEndDate}"></td>
-		</tr>
-		<tr>
-			<td>수업일수</td>
-			<td th:text=${lecture.lectureClassDays} th:value="${lecture.lectureClassDays}"></td>
-		</tr>
-	</table>
+	<form>
+		<table class="table table-striped" th:each="lecture:${lecture}">
+			<tr>
+				<td>강의공고명</td>
+				<td th:text="${lecture.noticeLectureTitle}" th:value="${lecture.lectureCode}"></td>
+			</tr>
+			<tr>
+				<td>교육원명</td>
+				<td th:text="${lecture.institutionName}" th:value="${lecture.institutionCode}"></td>
+			</tr>
+			<tr>
+				<td>강사명</td>
+				<td th:text="${lecture.memberTeacherName}" th:value="${lecture.memberTeacherCode}"></td>
+			</tr>
+			<tr>
+				<td>강의 시작일</td>
+				<td th:text="${lecture.lectureStartDate}" th:value="${lecture.lectureStartDate}"></td>
+			</tr>
+			<tr>
+				<td>강의 종료일</td>
+				<td th:text="${lecture.lectureEndDate}" th:value="${lecture.lectureEndDate}"></td>
+			</tr>
+			<tr>
+				<td>수업일수</td>
+				<td th:text="${lecture.lectureClassDays}" th:value="${lecture.lectureClassDays}"></td>
+			</tr>
+		</table>
+		<button id="modify" type="submit" class="btn btn-primary btn-rightLarge">수정</button>
+		<button id="delete" type="submit" class="btn btn-primary btn-rightLarge">삭제</button>
+	</form>
 </div>
 </html>
