--- a/lms/src/main/resources/templates/institution/lecture/noticeLectureList.html
+++ b/lms/src/main/resources/templates/institution/lecture/noticeLectureList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" 
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/associationLayout">
+      layout:decorator="layout/institutionLayout">
 <meta charset="utf-8">
 <!-- html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
@@ -9,10 +9,21 @@
 
 <!-- html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+<script>$(document).ready(function(){
+	// 강의공고 등록하기 버튼 클릭시 이벤트 처리
+	$('#btnAdd').on('click',function(){
+		console.log('#btnAdd click test');
+		location.href='/institution/lecture/addNoticeLecture'
+	});
+});
+</script>
 </th:block>
 
 <div layout:fragment="content">
 	<h1>강의공고 목록</h1>
+	
+	<button type="button" id="btnAdd" class="btn btn-primary btn-rightLarge">강의공고 등록하기</button><br><br>
+	
 	<table class="table table-striped">
 		<thead>
 			<tr>
@@ -29,7 +40,7 @@
 		</thead>
 		<tbody>
 			<tr th:each="list:${noticeLectureList}">
-				<td><a th:href="@{'/association/lecture/detailNoticeLecture?noticeLectureCode='+${list.noticeLectureCode}}" th:text="${list.noticeLectureTitle}" th:value="${list.noticeLectureCode}"></a></td>
+				<td><a th:href="@{'/institution/lecture/detailNoticeLecture?noticeLectureCode='+${list.noticeLectureCode}}" th:text="${list.noticeLectureTitle}" th:value="${list.noticeLectureCode}"></a></td>
 				<td th:text="${list.memberTeacherName}" th:value="${list.memberTeacherName}"></td>
 				<td th:text="${list.institutionName}" th:value="${list.institutionName}"></td>
 				<td th:text="${list.noticeLectureMinimumNo}" th:value="${list.noticeLectureMinimumNo}"></td>
