[김기남] 자격 시험 장소 세부 등록 미완성

--- a/lms/src/main/resources/templates/PI/infoQualification.html
+++ b/lms/src/main/resources/templates/PI/infoQualification.html
@@ -13,7 +13,7 @@
 
 <div layout:fragment="content">
 	<h3>자격증 리스트</h3>
-	<table border="1">
+	<table class="table table-striped">
 		<tr>
 			<th>자격증코드</th>
 			<th>자격종목명</th>
