--- a/lms/src/main/resources/templates/association/license/addLicenseTestLocationDetail.html
+++ b/lms/src/main/resources/templates/association/license/addLicenseTestLocationDetail.html
@@ -116,7 +116,7 @@
 	<form id="addLicenseTestLocationDetail" action="/association/license/addLicenseTestLocaitonDetail" method="post">
 		<div class="form-group">
 			<label>시험장소세부코드 :</label>
-			<input type="text" class="form-control" id="licenseTestLocationDetailCode" name="licenseTestLocationDetailCode">
+			<input type="text" class="form-control" id="licenseTestLocationDetailCode" name="licenseTestLocationDetailCode" hidden>
 		</div>
 		<div class="form-group">
 			<label>시험장소코드 :</label>
