--- a/lms/src/main/resources/templates/association/license/LicenseTestLocationDetailList.html
+++ b/lms/src/main/resources/templates/association/license/LicenseTestLocationDetailList.html
@@ -18,8 +18,9 @@
 
 <div layout:fragment="content">
 	<h3>자격 시험 장소 상세리스트</h3>
-	<a type="button" class="btn btn-secondary" th:href="@{/association/license/addlicenseTestLocationDetail}" th:text="등록"></a>
-	<table border="1">
+	<!-- <a type="button" class="btn btn-secondary" th:href="@{/association/license/addLicenseTestLocationDetail}" ></a> -->
+	<a type="button" class="btn btn-secondary" th:href="@{'/association/license/addLicenseTestLocaitonDetail?licenseTestLocationCode='+${licenseTestLocationCode}}" th:value="${licenseTestLocationCode}"th:text="등록"></a>
+	<table class="table table-striped">
 		<tr>
 			<th>시험장소세부코드</th>
 			<th>강의실/교실</th>
