--- a/lms/src/main/resources/templates/association/notice/noticeAnnualLicenseTestList.html
+++ b/lms/src/main/resources/templates/association/notice/noticeAnnualLicenseTestList.html
@@ -13,7 +13,7 @@
 
 <div layout:fragment="content">
 	<h3>연간 자격 시험 일정 리스트</h3>
-	<table border="1">
+	<table class="table table-striped">
 		<tr>
 			<th>연간자격시험계획코드</th>
 			<th>자격시험명</th>
