[한병권] 협회가 교육원 평가 상세 항목 추가 시작

--- a/lms/src/main/resources/templates/PI/PILogin.html
+++ b/lms/src/main/resources/templates/PI/PILogin.html
@@ -20,7 +20,7 @@
 <div layout:fragment="content">
 	<p style="height: 50px"></p>
 	<h3>로그인</h3>
-	<form action="/PALogin" method="post">
+	<form action="/PILogin" method="post">
 		<div class="form-group row">
 			<div class="col-sm-4"></div>
 			<label for="staticEmail" class="col-sm-2 col-form-label">ID</label>
