--- a/lms/src/main/resources/templates/fragments/associationSider.html
+++ b/lms/src/main/resources/templates/fragments/associationSider.html
@@ -50,7 +50,7 @@ $(document).ready(function() {
 		</button>	
 		<div class="navdropdown-container">
 			<a class="text-white" href="/association/evaluation/evaluationTotal">교육원평가관리</a>
-			<a class="text-white" href="/association/evaluation/evaluationTotalChart">평가 합계 차트</a>
+			<a class="text-white" href="/association/evaluation/addEvalByAssociation">평가 항목 추가 하기</a>
 			<a class="text-white" href="#">#강사평가</a>
 			<a class="text-white" href="#">#강의평가-수강생</a>
 			<a class="text-white" href="#">#교육원평가-수강생</a>
