[유하람] PI작업 수강신청 시작
- 수강생 입장에서 강의공고 목록 조회 이후 수강신청 폼으로 이동하는 처리 구현 중

--- a/lms/src/main/resources/templates/association/classroom/addClassroom.html
+++ b/lms/src/main/resources/templates/association/classroom/addClassroom.html
@@ -17,10 +17,13 @@ $(document).ready(function(){
 		let numberCheck = /^[0-9]+$/;
 		if($('#classroomName').val() ==''){
 			$('#helper').text('강의실명을 지정해주세요!');
+			$('#classroomName').focus();
 		}else if($('#classroomUse').val() ==''){
 			$('#helper').text('강의용도를 지정해주세요!');
+			$('#classroomUse').focus();
 		}else if(!numberCheck.test($('#classroomMaximumNo').val())){
 			$('#helper').text('숫자만 입력가능합니다!');
+			$('#classroomMaximumNo').focus();
 		} else {
 			$('#addClassroom').submit();
 		}
