--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -70,8 +70,8 @@
 	                    <button class="dropbtn">강의소개
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                    	<a th:href="@{'/PI/lecture/subjectList?institutionCode='+${institutionCode}}">강의/과목 조회</a>
-	                        <a href="#">#강의등록</a>
+	                    	<a th:href="@{'/PI/lecture/subjectList?institutionCode='+${institutionCode}}">과목 조회</a>
+	                        <a th:href="@{'/PI/lecture/lectureSignupNoticeLectureList?institutionCode='+${institutionCode}}">수강신청</a>
 	                        <a href="#">#강의자료실</a>
 	                        <a href="#">#전자도서관</a>
 	                    </div>
