--- a/lms/src/main/resources/templates/institution/institutionIndex.html
+++ b/lms/src/main/resources/templates/institution/institutionIndex.html
@@ -23,7 +23,7 @@
 	
 	<h2>교육원 : 강의실관리</h2>
 	<ul>
-		<li><a href="/institution/classroom/addClassroom">#강의실 등록</a></li>
+		<li><a href="/institution/classroom/addClassroom">강의실 등록</a></li>
 		<li><a href="/institution/classroom/classroomList">강의실 조회 및 관리</a></li>
 	</ul>
 	
