--- a/lms/src/main/resources/templates/PI/lecture/subjectList.html
+++ b/lms/src/main/resources/templates/PI/lecture/subjectList.html
@@ -73,7 +73,7 @@ $(document).ready(function(){
 			<option value="">--강의표준명--</option>
 		</select>
 		
-		<button id="searchSubject" type="button">조회</button><br><br>
+		<button id="searchSubject" type="button" class="btn btn-primary">과목 조회</button>
 		
 		<!-- 과목리스트 출력을 위한 table 태그 -->
 		<table id="subjectList" class="table table-striped">
